apps/alexmchugh-dev/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexmchugh-dev
  labels:
    app: alexmchugh-dev
spec:
  type: ClusterIP
  selector:
    app: alexmchugh-dev
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
